@@ -47,16 +47,19 @@ class TestGemExtConfigureBuilder < RubyGemTestCase
       end
     end
 
-    expected = %r|configure failed:
+    shell_error_msg = %r{(\./configure: No such file or directory)|(Can't open \./configure)}
+    sh_prefix_configure = "sh ./configure --prefix="
+    
+    expected = %r(configure failed:
 
-sh \./configure --prefix=#{Regexp.escape @dest_path}
-.*?: \./configure: No such file or directory
-|
+#{Regexp.escape sh_prefix_configure}#{Regexp.escape @dest_path}
+.*?: #{shell_error_msg}
+)
 
     assert_match expected, error.message
 
-    assert_equal "sh ./configure --prefix=#{@dest_path}", output.shift
-    assert_match %r|\./configure: No such file or directory\n|, output.shift
+    assert_equal "#{sh_prefix_configure}#{@dest_path}", output.shift
+    assert_match %r(#{shell_error_msg}\n), output.shift
     assert_equal true, output.empty?
   end
 
